Fixes header nav alignment

--- a/wp-content/themes/showcase-pro/style.css
+++ b/wp-content/themes/showcase-pro/style.css
@@ -1580,7 +1580,7 @@ img.stretch {
 @media only screen and (min-width: 1025px) {
 
 	.nav-primary .genesis-nav-menu > li > a {
-		margin: -2px 0 0 25px;
+		margin: 0px 0 0 25px;
 		font-size: 17px;
 		line-height: 17px;
 	}
